welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: '(' expected but identifier found.
while!(vuBiscuit()){
     ^Program:11: error: illegal start of simple expression
}
^